[package]
name = "Client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
eframe = "0.22.0"
rfd = "0.11.3"
egui_extras = {version = "0.22.0", features = ["image"]}
image = { version = "0.24", default-features = false, features = ["png","jpeg"] }

